# chicago

./: CMakeLists.txt  README.md  setup-linux.sh  setup-mac.sh  setup-windows.ps1
cmake/: FindFFmpeg.cmake
src/: CMakeLists.txt  abac.cpp  abac.h  base.h  bitstream.cpp  bitstream.h  evx_math.h  evx_memory.h  golomb.cpp  golomb.h  memory.cpp  muxer.cpp  muxer.h  version.h
src/audio/: audio.h  config.h  decode.cpp  encode.cpp  evx3.cpp  quantize.cpp  quantize.h  serialize.cpp  serialize.h  transform.cpp  transform.h  types.cpp  types.h  unserialize.cpp
src/video/: analysis.h  common.cpp  common.h  config.h  convert.cpp  convert.h  deblock.cpp  decode.cpp  egtables.h  encode.cpp  evx3.cpp  evx3.h  evx3dec.cpp  evx3dec.h  evx3enc.cpp  evx3enc.h  image.cpp  image.h  imageset.cpp  imageset.h  interp.cpp  interp.h  intra_pred.cpp  intra_pred.h  macroblock.h  motion.cpp  motion.h  quantize.cpp  quantize.h  sao.cpp  sao.h  scan.h  serialize.cpp  stream.cpp  stream.h  transform.cpp  transform.h  types.h  unserialize.cpp  xftables.h
tests/: CMakeLists.txt  test_audio_codec.cpp  test_audio_quality.cpp  test_audio_quantize.cpp  test_audio_transform.cpp  test_benchmark.cpp  test_bitstream.cpp  test_codec_intra.cpp  test_codec_multiframe.cpp  test_codec_quality.cpp  test_codec_roundtrip.cpp  test_convert.cpp  test_deblock.cpp  test_entropy.cpp  test_interp.cpp  test_intra_pred.cpp  test_motion.cpp  test_mux_roundtrip.cpp  test_muxer.cpp  test_quantize.cpp  test_serialize.cpp  test_transform.cpp
tools/: CMakeLists.txt  evx_analyze.cpp  evx_audio_decode.cpp  evx_audio_encode.cpp  evx_decode.cpp  evx_encode.cpp  evx_ffmpeg_util.cpp  evx_ffmpeg_util.h  evx_play.cpp
